--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,44 @@
-version: "3"
 services:
-    db:
-        image: postgres
-        restart: always
+    # PostgreSQL Database
+    database:
+        image: postgres:15-alpine
+
+        env_file:
+            - ./.env
         environment:
-            POSTGRES_PASSWORD: example
-            POSTGRES_USER: postgres
-        ports:
-            - 5438:5432
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DB}
+
         volumes:
-            - ./data:/var/lib/postgresql/data
-            - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+            - postgres-data:/var/lib/postgresql/data
+        healthcheck:
+            test: [CMD-SHELL, "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'"]
+            interval: 10s
+            timeout: 5s
+            retries: 5
+        ports:
+            - "5433:5432"
+
+    # Flask Server (Backend)
+    server:
+        build:
+            context: ./dist
+
+        env_file:
+            - ./.env
+
+        environment:
+            DATABASE_URL: ${DATABASE_URL}
+            NODE_ENV: production
+
+        command: ["node", "index.js"]
+
+        ports:
+            - "5000:5000"
+        depends_on:
+            database:
+                condition: service_healthy
+
+volumes:
+    postgres-data:
