--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 
         // other options remain sam
 
-        "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+        "target": "es2019" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
         // "lib": [],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
         // "jsx": "preserve",                                /* Specify what JSX code is generated. */
         "experimentalDecorators": true /* Enable experimental support for legacy experimental decorators. */,
@@ -61,7 +61,7 @@
         // "newLine": "crlf",                                /* Set the newline character for emitting files. */
         // "stripInternal": true,                            /* Disable emitting declarations that have '@internal' in their JSDoc comments. */
         // "noEmitHelpers": true,                            /* Disable generating custom helper functions like '__extends' in compiled output. */
-        // "noEmitOnError": true,                            /* Disable emitting files if any type checking errors are reported. */
+        "noEmitOnError": true /* Disable emitting files if any type checking errors are reported. */,
         // "preserveConstEnums": true,                       /* Disable erasing 'const enum' declarations in generated code. */
         // "declarationDir": "./",                           /* Specify the output directory for generated declaration files. */
         // "preserveValueImports": true,                     /* Preserve unused imported values in the JavaScript output that would otherwise be removed. */
