--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "test": "jest",
         "build": "npx tsc",
         "start": "node dist/index.js",
-        "dev": "nodemon index.ts",
-        "db:generate": "drizzle-kit generate"
+        "dev": "nodemon index.ts"
     },
     "keywords": [],
     "author": "",
@@ -18,13 +17,14 @@
         "class-validator": "^0.14.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
+        "drizzle-kit": "^0.30.5",
         "drizzle-orm": "^0.40.0",
         "express": "^4.19.2",
         "http-status-codes": "^2.3.0",
         "nodemon": "^3.1.0",
         "pg": "^8.13.3",
         "pg-hstore": "^2.3.4",
-        "postgres": "^3.4.5",
+        "reflect-metadata": "^0.2.2",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
@@ -34,10 +34,11 @@
         "@types/pg": "^8.11.11",
         "@types/supertest": "^6.0.2",
         "@types/uuid": "^9.0.8",
-        "drizzle-kit": "^0.30.5",
         "jest": "^29.7.0",
         "supertest": "^7.0.0",
+        "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.2.0",
         "tsx": "^4.19.3",
         "typescript": "^5.4.3"
     },
